--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jquery": "^3.1.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "style-loader": "^0.20.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "request": "^2.75.0"
   },
   "devDependencies": {
